infra/k8s-prod/expiration-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
  namespace: geo
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          image: alexandersarson/geo-expiration
          resources:
            limits:
              memory: '500Mi'
              cpu: '500m'
          ports:
            - name: liveness-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthcheck
              port: liveness-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: liveness-port
            periodSeconds: 4
