infra/k8s-prod/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
  namespace: geo
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: alexandersarson/geo-auth
          resources:
            limits:
              memory: '500Mi'
              cpu: '500m'
          ports:
            - name: liveness-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthcheck
              port: liveness-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: liveness-port
            periodSeconds: 4
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  namespace: geo
spec:
  selector:
    app: auth
  ports:
    - port: 3000
      targetPort: 3000
      name: auth
      protocol: TCP
