infra/k8s-prod/position-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-depl
  namespace: geo
spec:
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  selector:
    matchLabels:
      app: position
  template:
    metadata:
      labels:
        app: position
    spec:
      containers:
        - name: position
          image: alexandersarson/geo-position
          resources:
            limits:
              memory: '500Mi'
              cpu: '500m'
          ports:
            - name: liveness-port
              containerPort: 3000
          startupProbe:
            httpGet:
              path: /healthcheck
              port: liveness-port
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: liveness-port
            periodSeconds: 4
---
apiVersion: v1
kind: Service
metadata:
  name: position-srv
  namespace: geo
spec:
  selector:
    app: position
  ports:
    - port: 3000
      targetPort: 3000
      name: position
      protocol: TCP
