infra/k8s-prod/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: geo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - geo.sarson.me
      secretName: geo-sarson-me-tls
  rules:
    - host: geo.sarson.me
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /api/position/?(.*)
            backend:
              serviceName: position-srv
              servicePort: 3000
          - path: /api/post/?(.*)
            backend:
              serviceName: post-srv
              servicePort: 3000
